Fixed squashed logo

--- a/app/assets/stylesheets/peoplefinder/application.scss
+++ b/app/assets/stylesheets/peoplefinder/application.scss
@@ -401,6 +401,7 @@ textarea.form-control {
 
 #global-header #logo img {
   width: 254px;
+  padding-right:0px;
 }
 
 .login-bar {
